main/default/objects/Festival__c/Festival__c.object-meta.xml
<CustomObject>
    <label>Festival</label>
    <nameField>
        <label>Nome Festival</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festivals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>