main/default/objects/Festival__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Data di Fine del Festival</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>