main/default/objects/Festival__c/fields/General_Admission_Sold__c.field-meta.xml
<CustomField>
    <fullName>General_Admission_Sold__c</fullName>
    <description>Biglietti di tipo general admission</description>
    <label>General Admission Sold</label>
    <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
    <summaryFilterItems>
        <field>Attendee__c.Ticket_Type__c</field>
        <operation>equals</operation>
        <value>General Admission</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>