main/default/objects/Festival__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Data Inizio del Festival</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>