main/default/objects/Festival__c/fields/Total_Tickets_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets_Sold__c</fullName>
    <formula>General_Admission_Sold__c  +  VIP_Tickets_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tickets Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>