main/default/objects/Festival__c/fields/VIP_Tickets_Sold__c.field-meta.xml
<CustomField>
    <fullName>VIP_Tickets_Sold__c</fullName>
    <description>Numero di biglietti VIP venduti</description>
    <label>VIP Tickets Sold</label>
    <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
    <summaryFilterItems>
        <field>Attendee__c.Ticket_Type__c</field>
        <operation>equals</operation>
        <value>VIP</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>