main/default/objects/Festival__c/validationRules/Prevent_Ticket_Overbooking.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Ticket_Overbooking</fullName>
    <active>true</active>
    <description>prevenire la vendita di biglietti</description>
    <errorConditionFormula>Total_Tickets_Sold__c  &gt;  Capacity__c</errorConditionFormula>
    <errorMessage>Il numero di biglietti venduti è maggiore della capacità del festival</errorMessage>
</ValidationRule>